--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"peerDependencies": {
 		"eslint": "^7.32.0",
-		"prettier": "^2.3.2"
+		"prettier": "^2.3.2",
+		"sort-package-json": "^1.50.0"
 	}
 }
